<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NotificationsFragment">

    <TextView
        android:id="@+id/text_time_limit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/set_daily_usage_time_limit"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_current_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/current_limit"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_time_limit_title" />

    <TextView
        android:id="@+id/text_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hours"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/edit_text_hours"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_current_limit" />

    <EditText
        android:id="@+id/edit_text_hours"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="0"
        app:layout_constraintEnd_toStartOf="@+id/text_minutes"
        app:layout_constraintStart_toEndOf="@id/text_hours"
        app:layout_constraintTop_toBottomOf="@id/text_current_limit"
        app:layout_constraintWidth_percent="0.3" />

    <TextView
        android:id="@+id/text_minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/minutes"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/edit_text_minutes"
        app:layout_constraintStart_toEndOf="@id/edit_text_hours"
        app:layout_constraintTop_toBottomOf="@id/text_current_limit" />

    <EditText
        android:id="@+id/edit_text_minutes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_minutes"
        app:layout_constraintTop_toBottomOf="@id/text_current_limit"
        app:layout_constraintWidth_percent="0.3" />

    <Button
        android:id="@+id/button_set_time_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/set_time_limit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_minutes" />

</androidx.constraintlayout.widget.ConstraintLayout>
